tests/neg/fresh3.scala
struct Ref()
def main(): Unit =
  val x = Ref()
  def foo: Ref^ = x  // error

